--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
         </div>
         <p id="message" class="message"></p>
     </div>
-
-    <div class="container" id="content" style="display:none;">
+ <div class="container" id="content" style="display:none;">
         <div class="title">遇强文件官方网页</div>
         <div class="description">在这里，我们用技术定义未来，用文件连接世界</div>
+        <div class="description">
+            <a href="http://qm.qq.com/cgi-bin/qm/qlink?_wv=1027&uin=1037159969&site=qq&menu=yes" target="_blank">加入我们官方QQ群</a>
+        </div>
 
         <div class="container section" id="introduction">
             <h2>介绍群聊</h2>
